# vk-stats-oss

./: .gitignore
python/backend/: .gitignore  Dockerfile  auth-public-key.pem  docker-compose.yaml  pyproject.toml  readme.md
python/backend/src/: app.py  config.py  job.py  main.py  migrations.py  playground.py  utils.py
python/backend/src/api/: __init__.py  dependencies.py  state.py
python/backend/src/api/auth/: __init__.py  cookie.py  me.py  sign_in.py  sign_out.py
python/backend/src/api/groups/: __init__.py  last_updated.py  member_intersection.py  reach_prediction.py
python/backend/src/api/users/: __init__.py  average_portrait.py  build_portrait.py  get.py  group_intersection.py  groups.py  users.py
python/backend/src/api/vk/: __init__.py  oauth.py
python/backend/src/background/: __init__.py
python/backend/src/background/groups/: __init__.py  driver.py  update_job.py
python/backend/src/postgres/: __init__.py  group_member_intersection_requests.py  group_update_jobs.py  vk_group_members.py  vk_groups.py  vk_oauth_tokens.py  vk_users.py
python/backend/src/vk/: __init__.py  client.py  errors.py  execute.py  pagination.py  request.py
python/backend/src/vk/groups/: __init__.py  get.py  get_by_id.py  get_members.py  get_members_via_execute.py
python/backend/src/vk/oauth/: __init__.py  access_token.py  authorize.py
python/backend/src/vk/stats/: __init__.py  get.py
python/backend/src/vk/users/: __init__.py  get.py  get_subscriptions.py  get_via_execute.py
python/backend/src/vk_extra/: __init__.py  group_url.py
typescript/frontend/: package.json  (+3 more)
(+44 files in other folders)
